# heuristic-optimization-ulb

assignment_1/: script_ii.py  script_vnd.py
assignment_1/build-example/: flowshopWCT
assignment_1/report/: report.aux  report.out  report.tex  summary_stats.txt
assignment_1/results/: bestSolutions.txt  results_analysis.R  results_ii.csv  results_ii_1.csv  results_ii_imp.csv  results_vnd.csv  results_vnd.txt  test.txt  test_results.txt
assignment_1/src/: CMakeLists.txt  engine.cpp  engine.h  flowshop.cpp  ii_engine.cpp  ii_engine.h  ii_engine_2.cpp  ii_engine_2.h  local_search_engine.cpp  local_search_engine.h  pfsp_problem.cpp  pfsp_problem.h  pfsp_state.cpp  pfsp_state.h  pfspinstance.cpp  problem.cpp  problem.h  state.cpp  state.h  support_functions.cpp  support_functions.h  test.cpp  vnd_engine.cpp  vnd_engine.h
assignment_1/src-example/: Makefile  flowshop.cpp  pfspinstance.cpp
assignment_1/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
assignment_2/: script_gen_100.py  script_gen_50.py  script_gen_trace.py  script_iga_100.py  script_iga_50.py  script_iga_trace.py
assignment_2/report/: bibliography.bib  report.aux  report.bbl  report.out  report.tex  summary_stats.txt
assignment_2/results/: long_analysis.R  results_analysis.R  results_details_gen.csv  results_details_iga.csv  results_gen.csv  results_gen_long.csv  results_gen_old.csv  results_iga.csv  results_iga_long.csv  results_iga_old.csv  results_vnd.csv  results_vnd_old.csv  trace_analysis.R
assignment_2/src/: CMakeLists.txt
assignment_2/src/gen_main/: CMakeLists.txt  flowshop_gen.cpp
assignment_2/src/iga_main/: CMakeLists.txt  flowshop_iga.cpp
assignment_2/src/shared/: CMakeLists.txt  engine.cpp  engine.h  gen_engine.cpp  gen_engine.h  iga_engine.cpp  iga_engine.h  ii_engine.cpp  ii_engine.h  pfsp_problem.cpp  pfsp_problem.h  pfspinstance.cpp  pfspinstance.h  support_functions.cpp  support_functions.h  vnd_engine.cpp  vnd_engine.h
